fixtures/python/fallback/should_fail/env_default.py
import os


def read_port() -> str:
    return os.getenv("PORT", "3000")
